# pico-rtos-template

./: CMakeLists.txt  README.MD  template.c
Config/: FreeRTOSConfig.h
